--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "list",
-  "description": "A Vue.js project",
-  "version": "1.0.0",
-  "author": "katehrybkova <katiushka152701@gmail.com>",
-  "license": "MIT",
+  "name": "news-statistic",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "server": "node ./server/index.js",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "vue": "^2.5.11"
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "bootstrap-vue": "^2.15.0",
+    "cheerio": "^1.0.0-rc.3",
+    "cli-table": "^0.3.1",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "nightmare": "^3.0.2",
+    "osmosis": "^1.1.10",
+    "puppeteer": "^5.2.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "uuid": "^8.2.0",
+    "vue": "^2.6.11"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "babel-eslint": "^10.1.0",
+    "vue-template-compiler": "^2.6.11"
   }
 }
